* Fix the readline history test.
* [Bug 931] Require -lreadline to be asked for explicitly.
* [Bug 764] When looking for -lreadline support, also try using -lncurses.
* [Bug 909] Fix int32_t errors for ntohl().
* [Bug 376/214] Enhancements to support multiple if names and IP addresses.
* [Bug 929] int32_t is undefined on Windows.  Casting wrong.
* [Bug 928] readlink missing braces.
* [Bug 788] Update macros to support VS 2005.
* ntpd/ntp_timer.c: add missing sys_tai parameter for debug printf
* [Bug 917] config parse leaves files open
* [Bug 912] detect conflicting enable/disable configuration on interfaces
  sharing an IP address
* [Bug 771] compare scopeid if available for IPv6 addresses
* Lose obsolete crypto subcommands (Dave Mills).
* WWV is an HF source, not an LF source (Dave Mills).
* [Bug 899] Only show -i/--jaildir -u/--user options if we HAVE_DROPROOT.
* [Bug 916] 'cryptosw' is undefined if built without OpenSSL.
* [Bug 891] 'restrict' config file keyword does not work (partial fix).
* [Bug 890] the crypto command seems to be required now.
* [Bug 915] ntpd cores during processing of x509 certificates.
* Crypto lint cleanup from Dave Mills.
* [Bug 897] Check RAND_status() - we may not need a .rnd file.
* Crypto cleanup from Dave Mills.
* [Bug 911] Fix error message in cmd_args.c.
* [Bug 895] Log assertion failures via syslog(), not stderr.
* Documentation updates from Dave Mills.
* Crypto cleanup from Dave Mills.
* [Bug 905] ntp_crypto.c fails to compile without -DDEBUG.
* Avoid double peer stats logging.
* ntp-keygen cleanup from Dave Mills.
* libopts needs to be built after ElectricFence.
* [Bug 894] Initialize keysdir before calling crypto_setup().
* Calysto cleanup for ntpq.
* ntp-keygen -i takes an arg.
* Cleanup and fixes from Dave Mills.
* [Bug 887] Fix error in ntp_types.h (for sizeof int != 4).
* Bug 880 bug fixes for Windows build
* Improve Calysto support.
* The "revoke" parameter is a crypto command.